# REToolSyncServer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
cmake/: CivetWeb.cmake
protocol/: README.md  cursor_request.json  cursor_response.json
src/: REToolSyncServer.cpp
